--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <p> <mark> sou fã de: </mark> </p>
             <p>-musicas<br>-charlie brow jr<br>-minha mulher</p>
             <img src="chorao.png">
+            <h1><strong>28/06/2023</strong></h1>
+            <h1> style="background-color :blue programação</h1>
+      
+      
 </body>
 </html>
 
