--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </head>
       <body>
             <h1><strong>28/06/2023</strong></h1>
-            <p><mark style="background-color:blue"> programação</mark>
+            <p><mark style="background-color blue">programação</mark> 
             <img src="chorao.png">
              
 </body>
