--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       <body>
             <h1><strong>28/06/2023</strong></h1>
             <p><mark style="background-color blue">programação</mark> 
-            <img src="chorao.png">
             <h1><strong>Os incriveis e não incriveis 7 dias da semana</strong></h1>
             <ol type="I">
                   <li>segunda-feira</li>
@@ -38,7 +37,7 @@
                      </ul>
                   <li style=font-weight:bold;sexta-feira</li>
                      <ul>
-                         <li style="font-weight:normal;>tarde;
+                         <li style="font-weight:normal;del>manha;</del>tarde;
                          <li style="font-weight:normal;>manhã;
                          <li style="font-weight:bold;>noite;
                      </ul>
