--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <ol type="I">
                   <li>segunda-feira</li>
                      <ul>
-                         tarde;
-                         manhã;
-                         noite;
+                        <li></li.><del>tarde;
+                        <li></li><del>manhã;
+                        <li></li>noite;
                      </ul>
                   <li>terça-feira</li>
                      <ul>
