--- a/index.html
+++ b/index.html
@@ -9,49 +9,49 @@
       <body>
             <h1><strong>28/06/2023</strong></h1>
             <p><mark style="background-color blue">programação</mark> 
-            <h1><strong>Os incriveis e não incriveis 7 dias da semana</strong></h1>
+            <h1><strong>Os "incriveis e não incriveis" 7 dias da semana</strong></h1>
             <ol type="I">
                   <li>segunda-feira</li>
                      <ul>
-                        <li></li.><del>tarde;
-                        <li></li><del>manhã;
-                        <li></li>noite;
+                        <li></li.><s>manhã;
+                        <li><s>tarde;
+                        <li><noite;
                      </ul>
                   <li>terça-feira</li>
                      <ul>
+                        <li>manhã;
                         <li>tarde;
-                        <li> manhã;
                         <li>noite;
                      </ul>
                   <li>quarta-feira</li>
                      <ul>
-                         <li>tarde;
                          <li>manhã;
+                         <li>tarde;
                          <li>noite;
                      </ul>
                   <li>quinta-feira</li>
                      <ul>
-                         <li>tarde;
                          <li>manhã;
+                         <li>tarde;
                          <li>noite;
                      </ul>
                   <li style=font-weight:bold;sexta-feira</li>
                      <ul>
                          <li style="font-weight:normal;del>manha;</del>tarde;
-                         <li style="font-weight:normal;>manhã;
+                         <li style="font-weight:normal;>tarde;
                          <li style="font-weight:bold;>noite;
                      </ul>
                   <li>sábado</li>
                      <ul>
-                         <li>tarde;
                          <li>manhã;
+                         <li>tarde;
                          <li>noite;
                      </ul>
                   <li>domingo</li>
                       <ul>
-                         tarde;
-                         manhã;
-                         noite;
+                         <li>tarde;
+                         <li>manhã;
+                         <li>noite;
                      </ul>
       
       
