--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                      </ul>
                   <li style=font-weight:bold;sexta-feira</li>
                      <ul>
-                         <li style="font-weight:normal;del>manha;</del>tarde;
+                         <li style="font-weight:normal;>manha;
                          <li style="font-weight:normal;>tarde;
                          <li style="font-weight:bold;>noite;
                      </ul>
