--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <ol type="I">
                   <li>segunda-feira</li>
                      <ul>
-                        <li><s>manhã;
-                        <li><s>tarde;
+                        <li><del>manhã;
+                        <li><del>tarde;
                         <li><noite;
-                     </ul>
+                  </ul>
                   <li>terça-feira</li>
                      <ul>
                         <li>manhã;
@@ -35,7 +35,7 @@
                          <li>tarde;
                          <li>noite;
                      </ul>
-                  <li style=font-weight:bold;sexta-feira</li>
+                  <li <style=font-weight:bold;sexta-feira></li>
                      <ul>
                          <li style="font-weight:normal;>manha;
                          <li style="font-weight:normal;>tarde;
