--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html> 
 <html lang="pt.br">
       <head>
+      <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
       <meta charset="UTF=8">
       <META NAME="viewport"content"=width=device-width,initial-scale=1.0>
       <title> Kristian walz roque </title>
