--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <html lang="pt.br">
       <head>
-      <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen" />
+      <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
       <meta charset="UTF=8">
       <META NAME="viewport"content"=width=device-width,initial-scale=1.0>
       <title> Kristian walz roque </title>
@@ -10,27 +10,27 @@
       <body>
             <h1><strong>28/06/2023</strong></h1>
             <p><mark style="background-color blue">Programação</mark> 
-            <h1><strong>Os "incriveis e não incriveis" 7 dias da semana</strong></h1>
+            <h1><strong>Os "incriveis e não incriveis" 7 dias da semana:</strong></h1>
             <ol type="I">
-                  <li>segunda-feira</li>
+                  <li>segunda-feira
                      <ul>
                         <li><del>manhã;
                         <li><del>tarde;
-                        <li><noite;
+                        <li>noite;
                      </ul>
-                  <li>terça-feira</li>
+                  <li>terça-feira
                      <ul>
                         <li>manhã;
                         <li>tarde;
                         <li>noite;
                      </ul>
-                  <li>quarta-feira</li>
+                  <li>quarta-feira
                      <ul>
                          <li>manhã;
                          <li>tarde;
                          <li>noite;
                      </ul>
-                  <li>quinta-feira</li>
+                  <li>quinta-feira
                      <ul>
                          <li>manhã;
                          <li>tarde;
@@ -42,13 +42,13 @@
                          <li style="font-weight:normal;>tarde;
                          <li style="font-weight:bold;>noite;
                      </ul>
-                  <li>sábado</li>
+                  <li>sábado
                       <ul>
                          <li>manhã;
                          <li>tarde;
                          <li>noite;
                       </ul>
-                  <li>domingo</li>
+                  <li>domingo
                       <ul>
                          <li>tarde;
                          <li>manhã;
