--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html> 
 <html lang="pt.br">
       <head>
-      <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen"/>
       <meta charset="UTF=8">
       <META NAME="viewport"content"=width=device-width,initial-scale=1.0>
       <title> Kristian walz roque </title>
@@ -36,24 +35,26 @@
                          <li>tarde;
                          <li>noite;
                      </ul>
-                  <li<style=font-weight:bold;sexta-feira></li>
-                     <ul>
-                         <li style="font-weight:normal;>manha;
-                         <li style="font-weight:normal;>tarde;
-                         <li style="font-weight:bold;>noite;
-                     </ul>
-                  <li>sábado
-                      <ul>
-                         <li>manhã;
-                         <li>tarde;
-                         <li>noite;
-                      </ul>
-                  <li>domingo
-                      <ul>
-                         <li>tarde;
-                         <li>manhã;
-                         <li>noite;
-                      </ul>
+                  <li style="font-weight:bold;">sexta-feira;
+				<ul>
+					<li style="font-weight:normal;"><del>manha;</del></li>
+					<li style="font-weight:normal;">tarde;</li>
+					<li style="font-weight:bold;"><u>noite.</u></li>
+				</ul>
+			 <li>sabado;
+				<ul>
+					<li>manha;
+					<li>tarde;
+					<li>noite;
+				</ul>
+			 <li>domingo;
+				<ul>
+					<li>manha;
+					<li>tarde;
+					<li>noite;
+				</ul>
+	</body>
+</html>
 </body>
 </html>
 
