--- a/index.html
+++ b/index.html
@@ -7,53 +7,14 @@
       <title> Kristian walz roque </title>
       </head>
       <body>
-            <h1><strong>28/06/2023</strong></h1>
-            <p><mark style="background-color blue">Programação</mark> 
-            <h1><strong>Os "incriveis e não incriveis" 7 dias da semana:</strong></h1>
-            <ol type="I">
-                  <li>segunda-feira
-                     <ul>
-                        <li><del>manhã;
-                        <li><del>tarde;
-                        <li>noite;
-                     </ul>
-                  <li>terça-feira
-                     <ul>
-                        <li>manhã;
-                        <li>tarde;
-                        <li>noite;
-                     </ul>
-                  <li>quarta-feira
-                     <ul>
-                         <li>manhã;
-                         <li>tarde;
-                         <li>noite;
-                     </ul>
-                  <li>quinta-feira
-                     <ul>
-                         <li>manhã;
-                         <li>tarde;
-                         <li>noite;
-                     </ul>
-                  <li style="font-weight:bold;">sexta-feira;
-				<ul>
-					<li style="font-weight:normal;"><del>manha;</del></li>
-					<li style="font-weight:normal;">tarde;</li>
-					<li style="font-weight:bold;"><u>noite.</u></li>
-				</ul>
-			 <li>sabado;
-				<ul>
-					<li>manha;
-					<li>tarde;
-					<li>noite;
-				</ul>
-			 <li>domingo;
-				<ul>
-					<li>manha;
-					<li>tarde;
-					<li>noite;
-				</ul>
-	</body>
+            <h1><strong>O impossível é só questao de opinião</strong></h1>
+            <p><mark style="background-color blue"></mark> 
+            <h1><strong>Os "e disso os lucos sabem</strong></h1>
+            <p>Audaz, revel, vivaz
+Dançando com o caos, namorando com a paz</p>  
+      <img src=
+
+      </body>
 </html>
 </body>
 </html>
