--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
             <h1><strong>Os "e disso os lucos sabem</strong></h1>
             <p>Audaz, revel, vivaz
 Dançando com o caos, namorando com a paz</p>  
-      <img src=
+      <img src=https://github.com/eudiscordo/repositorio-kristian_html/blob/12dbb8acd6e2e745d53bd180075c8eb244b052d7/chorao.png </img>
+            
+            
 
       </body>
 </html>
