--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
             <h1><strong>O impossível é só questao de opinião</strong></h1>
             <p><mark style="background-color blue"></mark> 
             <h1><strong>Os "e disso os lucos sabem</strong></h1>
-            <p>Audaz, revel, vivaz
-Dançando com o caos, namorando com a paz</p>  
+            <p>Audaz, revel, vivaz Dançando com o caos, namorando com a paz</p>  
       <img src=https://github.com/eudiscordo/repositorio-kristian_html/blob/12dbb8acd6e2e745d53bd180075c8eb244b052d7/chorao.png </img>
             
             
