--- a/index.html
+++ b/index.html
@@ -1,22 +1,15 @@
 <!DOCTYPE html>
-<html> 
-<html lang="pt.br">
-      <head>
-      <meta charset="UTF=8">
-      <META NAME="viewport"content"=width=device-width,initial-scale=1.0>
-      <title> Kristian walz roque </title>
-      </head>
-      <body>
-            <h1><strong>O impossível é só questao de opinião</strong></h1>
-            <p><mark style="background-color blue"></mark> 
-            <h1><strong>Os "e disso os lucos sabem</strong></h1>
-            <p>Audaz, revel, vivaz Dançando com o caos, namorando com a paz</p>  
-      <img src=https://github.com/eudiscordo/repositorio-kristian_html/blob/12dbb8acd6e2e745d53bd180075c8eb244b052d7/chorao.png </img>
-            
-            
-
-      </body>
-</html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kristian Walz Roque</title>
+</head>
+<body>
+  <h1><strong>O impossível é só questão de opinião</strong></h1>
+  <p><mark style="background-color: blue;">E disso os loucos sabem</mark></p>
+  <h1><strong>Os "e disso os loucos sabem</strong></h1>
+  <p>Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</p>  
+  <img src="URL_DA_IMAGEM" alt="Descrição da Imagem">
 </body>
 </html>
-
