--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <p><mark style="background-color: blue;">E disso os loucos sabem</mark></p>
   <h1><strong>Os "e disso os loucos sabem</strong></h1>
   <p>Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</p>  
-  <img src="URL_DA_IMAGEM" alt="Descrição da Imagem">
+  <img src="https://pt.m.wikipedia.org/wiki/Ficheiro:Chor%C3%A3o_em_algum_show_2008_colorized.jpg"
+    alt="chorão elegante">
 </body>
 </html>
