--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   <h1><strong>O impossível é só questão de opinião</strong></h1>
-  <p><mark style="background-color: blue;">E disso os loucos sabem</mark></p>
-  <h1><strong>Os "e disso os loucos sabem</strong></h1>
-  <p>Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</p>  
+  <p><mark style="background-color: blue;">Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</mark></p>
+  <h1><strong>"e disso os loucos sabem</strong></h1>
+  
   <img src="https://pt.m.wikipedia.org/wiki/Ficheiro:Chor%C3%A3o_em_algum_show_2008_colorized.jpg"
     alt="chorão elegante">
 </body>
