--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p><mark style="background-color: blue;">Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</mark></p>
   <h1><strong>"e disso os loucos sabem</strong></h1>
   
-  <img src="https://pt.m.wikipedia.org/wiki/Ficheiro:Chor%C3%A3o_em_algum_show_2008_colorized.jpg"
+  <img src="https://github.com/eudiscordo/repositorio-kristian_html/blob/f6b68ade22c6c82c97e44b53d901be095cf038e1/chorao.png"
     alt="chorão elegante">
 </body>
 </html>
