--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1><strong>O impossível é só questão de opinião</strong></h1>
-  <p><mark style="background-color: blue;">Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</mark></p>
+  <p><mark style="background-color: blue;">Sou Kristian, um rapaz Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</mark></p>
   <h1><strong>"e disso os loucos sabem</strong></h1>
   
   <img src="https://github.com/eudiscordo/repositorio-kristian_html/blob/f6b68ade22c6c82c97e44b53d901be095cf038e1/chorao.png"
