--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1><strong>"O impossível é só questão de opinião"</strong></h1>
   <p><mark style="background-color: blue;">Sou Kristian, um rapaz Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</mark></p>
   <h1><strong>"e disso os loucos sabem"</strong></h1>
-  
+  <p> gosto de frequentar lugares onde me sinto confortável, principalmente se hojver música</p>
   <img src="https://github.com/eudiscordo/repositorio-kristian_html/blob/f6b68ade22c6c82c97e44b53d901be095cf038e1/chorao.png"
     alt="chorão elegante">
 </body>
