--- a/index.html
+++ b/index.html
@@ -3,13 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kristian Walz Roque</title>
+  <title>MATHEUS.W e KRISTIAN.W</title>
 </head>
 <body>
   <h1><strong>"O impossível é só questão de opinião"</strong></h1>
-  <p><mark style="background-color: blue;">Sou Kristian, um rapaz Audaz, rebelde, vivaz. Dançando com o caos, namorando com a paz.</mark></p>
-  <h1><strong>"e disso os loucos sabem"</strong></h1>
-  <p> gosto de frequentar lugares onde me sinto confortável, principalmente se houver música e conversas interessantes com pessoas interessantes.</p>
-  <img src="chorao.png"alt="chorão elegante">
+  <h1><mark style="background-color: blue;">Programação(matemática II)</mark></h1>
+  <h1><mark style="background-color: red;">Prova primeiro Trimestre</mark></h1>
+  <h1><strong>"prova de HTML em laboratório"</strong></h1>
+  <Minha dupla é..desprovida de de dinheiro</p>
+  <ol>
+  <li>primeiro item</li>
+  <li>segundo item</li>
+  <li>terceiro item</li>
+  <img> 
+</ol>
+
+
+
+
+
+
+
+
 </body>
 </html>
