--- a/index.html
+++ b/index.html
@@ -6,24 +6,34 @@
   <title>MATHEUS.W e KRISTIAN.W</title>
 </head>
 <body>
-  <h1><strong>"O impossível é só questão de opinião"</strong></h1>
-  <h1><mark style="background-color: blue;">Programação(matemática II)</mark></h1>
-  <h1><mark style="background-color: red;">Prova primeiro Trimestre</mark></h1>
-  <h1><strong>"prova de HTML em laboratório"</strong></h1>
+  <h1><mark style="background-color: blue;">Programação(matemática II)</mark></h2>
+  <h2><mark style="background-color: red;">Prova primeiro Trimestre</mark></h2>
+  <h2><strong>"prova de HTML em laboratório"</strong></h2>
   <Minha dupla é..desprovida de de dinheiro</p>
-  <ol>
-  <li>primeiro item</li>
-  <li>segundo item</li>
-  <li>terceiro item</li>
-  <img> 
-</ol>
-
-
-
-
-
-
-
-
+  <div class="container">
+  <h1>Prova de HTML em Laboratório</h1>
+  <div class="section">
+    <h2>I. Onde eu Kristian e Matheus gostamos de ir:</h2>
+    <p>Kristian gosto de ir no shopping</p>
+    <p>Matheusna casa da vó</p>
+  </div>
+  <div class="section">
+    <h2>II. O que gostamos de comer:</h2>
+    <p>eu gosto de bolo</p>
+    <p>Matheus de pastel</p>
+  </div>
+  <div class="section">
+    <h2>III. O que gostamos de beber:</h2>
+    <p>eu gosto de água de coco</p>
+    <p>Matheus de café</p>
+  </div>
+</div>
 </body>
 </html>
+
+
+
+
+
+
+
